Update ELLPACK SpMV

--- a/code/ELLPACK_SpMV.ipynb
+++ b/code/ELLPACK_SpMV.ipynb
@@ -2,26 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import numba"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import numba\n",
+    "\n",
     "def ellpack_spmv_single_thread(N, b, val, J, x):\n",
     "    y = np.zeros(N, dtype=np.float64)\n",
     "    for i in range(N):\n",
     "        for k in range(b):\n",
-    "            if(val[k + N * i] != 0):\n",
-    "                y[i] += val[k + N * i] * x[J[k + N * i]];\n",
+    "            if val[k + N * i] != 0:\n",
+    "                y[i] += val[k + N * i] * x[J[k + N * i]]\n",
     "    \n",
     "    return y\n",
     "\n",
@@ -30,8 +23,8 @@
     "    y = np.zeros(N, dtype=np.float64)\n",
     "    for i in numba.prange(N):\n",
     "        for k in range(b):\n",
-    "            if(val[k + N * i] != 0):\n",
-    "                y[i] += val[k + N * i] * x[J[k + N * i]];\n",
+    "            if val[k + N * i] != 0:\n",
+    "                y[i] += val[k + N * i] * x[J[k + N * i]]\n",
     "    \n",
     "    return y"
    ]
