Update SpMV code

--- a/code/CSR_to_Sliced_ELLPACK.ipynb
+++ b/code/CSR_to_Sliced_ELLPACK.ipynb
@@ -22,7 +22,7 @@
     "    \n",
     "    for i in range(slice_number):\n",
     "        max_nnz = 0\n",
-    "        for s in range(slice_height - 1):\n",
+    "        for s in range(slice_height):\n",
     "            col_count = rowptr[i * slice_height + s + 1] - rowptr[i * slice_height + s]\n",
     "            max_nnz = max(max_nnz, col_count)\n",
     "        \n",
