Update code files

--- a/code/lib/Sliced_ELLPACK_SpMV.ipynb
+++ b/code/lib/Sliced_ELLPACK_SpMV.ipynb
@@ -12,26 +12,33 @@
     "def sliced_ellpack_spmv_single_thread(N, slice_ptr, colidx, val, x, slice_height):\n",
     "    \"\"\"Sliced ELLPACK format based SpMV (y=Ax)\"\"\"\n",
     "    \n",
-    "    y = np.zeros(N, dtype=np.float64)\n",
-    "    for s in range(0, N, slice_height):\n",
-    "        for r in range(s, s + slice_height, 1):\n",
-    "            s_ptr = int(s / slice_height)\n",
-    "            for i in range(slice_ptr[s_ptr] + r - s, slice_ptr[s_ptr + 1], slice_height):\n",
-    "                y[r] += x[colidx[i]] * val[i]\n",
+    "    y = np.zeros(N, dtype=np.float32)\n",
+    "    slice_count = int(N / slice_height)\n",
+    "    \n",
+    "    for s in range(slice_count):\n",
+    "        row_idx = s * slice_height\n",
+    "        for r in range(row_idx, row_idx + slice_height):\n",
+    "            for i in range(slice_ptr[s] + r - row_idx, slice_ptr[s + 1], slice_height):\n",
+    "                Ax_data = x[colidx[i]] * val[i]\n",
+    "                y[r] += Ax_data\n",
     "    \n",
     "    return y\n",
     "\n",
-    "@numba.njit\n",
-    "def sliced_ellpack_spmv_multi_thread(N, slice_ptr, colidx, val, x, slice_height):\n",
+    "@jit(nopython=True, parallel=True, nogil=True, fastmath=True)\n",
+    "def sliced_ellpack_spmv_multi_thread(y, N, slice_count, slice_ptr, colidx, val, x, slice_height):\n",
     "    \"\"\"Sliced ELLPACK format based SpMV (y=Ax)\"\"\"\n",
     "    \n",
-    "    y = np.zeros(N, dtype=np.float64)\n",
-    "    for s in numba.prange(0, N, slice_height):\n",
-    "        for r in range(s, s + slice_height, 1):\n",
-    "            s_ptr = int(s / slice_height)\n",
-    "            for i in range(slice_ptr[s_ptr] + r - s, slice_ptr[s_ptr + 1], slice_height):\n",
-    "                y[r] += x[colidx[i]] * val[i]\n",
-    "    \n",
+    "    for s in numba.prange(slice_count):\n",
+    "        row_idx = s * slice_height\n",
+    "        loop_y = np.zeros(slice_height, dtype=np.float32)\n",
+    "        for r in range(slice_height):\n",
+    "            row_data = 0.0\n",
+    "            for i in range(slice_ptr[s] + r, slice_ptr[s + 1], slice_height):\n",
+    "                Ax_data = x[colidx[i]] * val[i]\n",
+    "                row_data += Ax_data\n",
+    "            loop_y[r] = row_data\n",
+    "        y[s * slice_height:(s + 1) * slice_height] = loop_y\n",
+    "            \n",
     "    return y"
    ]
   },
@@ -75,44 +82,6 @@
    ],
    "source": [
     "%time y = sliced_ellpack_spmv_single_thread(N, slice_ptr, colidx, val, x, slice_height)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 19 µs, sys: 1e+03 ns, total: 20 µs\n",
-      "Wall time: 22.9 µs\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time y = sliced_ellpack_spmv_multi_thread(N, slice_ptr, colidx, val, x, slice_height)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([17.2494, 32.0346, 18.4815, 36.963 ])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
    ]
   }
  ],
